feat(subscribedusers): create full service and API for storing subscribed users